--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <p>
             <br>
-            <button id="generate" class="btn btn-primary" data-show="#excuse">Générer une excuse de gros sac :3</button>
+            <button id="generate" class="btn btn-primary btn-lg" data-show="#excuse">Générer une excuse de gros sac :3</button>
 
             <noscript><br>Cette application ne fonctionnera pas sans Javascript, merci de l'activer ;-)</noscript>
         </p>
